<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>pl.tispmc</groupId>
	<artifactId>wolfie</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Wolfie</name>
	<description>Leveling and exp counting bot for TIS Arma group</description>
	<url/>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>Aquerr</id>
			<name>Bartłomiej Stępień</name>
			<url>https://github.com/Aquerr</url>
			<roles>
				<role>Lead Developer</role>
			</roles>
		</developer>
		<developer>
			<id>Brancuuuu</id>
			<name>Brancu</name>
			<url>https://github.com/Brancuuuu</url>
			<roles>
				<role>Lead Developer</role>
			</roles>
		</developer>
	</developers>
	<scm>
		<connection>scm:svn:https://github.com/Aquerr/WolfieBot.git</connection>
		<developerConnection>scm:svn:https://github.com/Aquerr/WolfieBot.git</developerConnection>
		<url>https://github.com/Aquerr/WolfieBot</url>
	</scm>
	<properties>
		<java.version>21</java.version>
		<jda.version>5.3.0</jda.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>${jda.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
